<?xml version="1.0"?>
<package>
  <name>hase_firmware</name>
  <version>0.0.0</version>
  <description>Firmware code for the Hase robot</description>

  <author email="garyservin@gmail.com">Gary Servin</author>
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hase_msgs</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_mbed</build_depend>
  <run_depend>hase_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_mbed</run_depend>

  <export>
  </export>
</package>
